--- a/SFML Game.vcxproj
+++ b/SFML Game.vcxproj
@@ -18,6 +18,18 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="hitbox.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="room.cpp" />
+    <ClCompile Include="sprite.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="hitbox.h" />
+    <ClInclude Include="point.h" />
+    <ClInclude Include="room.h" />
+    <ClInclude Include="sprite.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{7631673D-030A-4DAC-9D1A-24D9E3409A2A}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
@@ -155,16 +167,6 @@
       <AdditionalDependencies>sfml-main.lib;sfml-window.lib;sfml-graphics.lib;sfml-audio.lib;sfml-system.lib;sfml-network.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="hitbox.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="sprite.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="hitbox.h" />
-    <ClInclude Include="point.h" />
-    <ClInclude Include="sprite.h" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
